[project]
name = "ryuuchi-automation"
version = "0.1.0"
description = ""
authors = [
    {name = "チャーリー",email = "charlie@softem.co.jp,"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "selenium (>=4.34.2,<5.0.0)",
    "poetry-core (>=2.0.0,<3.0.0)",
    "playwright (>=1.54.0,<2.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
